--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div id="inputFields">
         <div class="userInput">
           <input type="text" placeholder="Name" required>
-          <input type="number" placeholder="Should Pay" step="any" required>
-          <input type="number" placeholder="Previously Paid" step= "any" required>
+          <input type="number" placeholder="Pay" step="any" value="0" required>
+          <input type="number" placeholder="Receive" step= "any" value="0" required>
         </div>
       </div>
       <button type="button" onclick="addUser()">Add User</button>
