--- a/index.html
+++ b/index.html
@@ -6,22 +6,35 @@
   <title>Payment Flow Optimizer</title>
   <link rel="stylesheet" href="/static/style.css">
 </head>
-<body>
+<body onload="initializeUsers()">
   <div class="container">
     <h1>Payment Flow Optimizer</h1>
     <form id="paymentForm">
       <div id="inputFields">
-        <div class="userInput">
-          <input type="text" placeholder="Name" required>
-          <input type="number" placeholder="Pay" step="any" value="0" required>
-          <input type="number" placeholder="Receive" step= "any" value="0" required>
-        </div>
       </div>
       <button type="button" onclick="addUser()">Add User</button>
       <button type="submit">Calculate</button>
     </form>
     <div id="result"></div>
+    <div class="language-switcher">
+      <label for="language-select">Language:</label>
+      <select id="language-select" onchange="redirectToLanguagePage()">
+        <option value="en">English</option>
+        <option value="zh">中文</option>
+      </select>
+    </div>
   </div>
   <script src="static/script.js"></script>
+  <script>
+    function redirectToLanguagePage() {
+      const selectedLanguage = document.getElementById("language-select").value;
+      window.location.href = `/?lang=${selectedLanguage}`
+    }
+
+    function initializeUsers() {
+      addUser();
+      addUser();
+    }
+  </script>
 </body>
 </html>
